# wol-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish-pypi.yml  release.yml
scripts/: wol_entry.py
src/wol_cli/: __init__.py  __main__.py  cli.py  config.py  packet.py  transport.py
standalone_script/: wol.py
tests/: test_cli.py  test_config.py  test_packet.py  test_transport.py
