[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wol-cli"
version = "0.1.0"
description = "Wake-on-LAN magic packet sender with VLAN support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["wake-on-lan", "wol", "network", "vlan", "magic-packet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.10",
    "mypy>=1.0",
    "pyinstaller>=6.0",
    "build>=1.0",
]

[project.scripts]
wol = "wol_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/wol-cli-tool"
Repository = "https://github.com/yourusername/wol-cli-tool"
Issues = "https://github.com/yourusername/wol-cli-tool/issues"
Changelog = "https://github.com/yourusername/wol-cli-tool/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/wol_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
